--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -8,7 +8,7 @@ on:
   #   branches:
   #     - master
   schedule:
-    - cron: 0 16,22 * * *
+    - cron: 0 16 * * *
   watch:
     types: started
     
@@ -16,7 +16,7 @@ env:
   JD_COOKIE: ${{ secrets.JD_COOKIE }}
   JD_DUAL_COOKIE: ${{ secrets.JD_DUAL_COOKIE }}
   PUSH_KEY: ${{ secrets.PUSH_KEY }}
-  UPLOAD_BESULT_DIR: true
+  UPLOAD_BESULT_DIR: false
 
 jobs:
     build:
